@@ -1,3 +1,11 @@
+2014-07-22  Brent Fulgham  <bfulgham@apple.com>
+
+        Build fix for non-clang compile.
+
+        * jsc.cpp:
+        (WTF::RuntimeArray::deleteProperty): Need (fake) return
+        value when NO_RETURN_DUE_TO_CRASH is not defined.
+
 2014-07-22  Filip Pizlo  <fpizlo@apple.com>
 
         Merge r169628 from ftlopt.
